# mail-backup

./: .env.example  .gitignore  Cargo.toml  README.md
src/: connection.rs  mailbox.rs  main.rs  message.rs  session.rs
